--- a/carla_object_detection/pyproject.toml
+++ b/carla_object_detection/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "pycocotools (>=2.0.8,<3.0.0)",
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
