--- a/carla_object_detection/config/config.yaml
+++ b/carla_object_detection/config/config.yaml
@@ -5,16 +5,17 @@ model:
   hyperparameters:
     optimizer:
       type: AdamW
-      learning_rate: 0.0001
-      weight_decay: 0.0001
+      learning_rate: 0.00001
+      weight_decay: 0.00001
     loss: crossentropy
     metrics:
       - accuracy
       - top_k_categorical_accuracy
 
 training:
+  use_checkpoint : "checkpoint/custom/best_model.pth"
   use_wandb: False
-  batch_size: 16
+  batch_size: 8
   epochs: 1000
   save_path: "checkpoint/custom"
   early_stopping:
@@ -32,3 +33,10 @@ data:
   augmentation:
     resize: 416
     normalize: true
+
+inference:
+  checkpoint_path: "checkpoint/custom/best_model.pth"
+  resize: 416
+  conf_threshold: 0.3
+  nms_threshold: 0.8
+  num_classes: 10
