--- a/carla_object_detection/pyproject.toml
+++ b/carla_object_detection/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "wandb (>=0.19.7,<0.20.0)",
     "matplotlib (>=3.10.1,<4.0.0)",
     "pycocotools (>=2.0.8,<3.0.0)",
+    "opencv-python (==4.5.5.64)",
 ]
 
 [tool.poetry]
