--- a/object_detection/YOLOv4_darknet/config/yolov4-tiny.cfg
+++ b/object_detection/YOLOv4_darknet/config/yolov4-tiny.cfg
@@ -18,7 +18,7 @@ hue=.1
 learning_rate=0.00261
 burn_in=1000
 
-max_batches = 20000
+max_batches = 40000
 policy=steps
 steps=16000,18000
 scales=.1,.1
@@ -208,6 +208,9 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
+size=1
+stride=1
+pad=1
 filters=45
 activation=linear
 
