--- a/object_detection/YOLOv4_darknet/pyproject.toml
+++ b/object_detection/YOLOv4_darknet/pyproject.toml
@@ -11,9 +11,12 @@ requires-python = ">=3.10"
 dependencies = [
     "onnx (>=1.17.0,<2.0.0)",
     "opencv-python (>=4.11.0.86,<5.0.0.0)",
-    "torch (>=2.6.0,<3.0.0)"
+    "torch (>=2.6.0,<3.0.0)",
+    "onnxsim (>=0.4.36,<0.5.0)"
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
